Archive2/98/f6aad4634511e3/main.cpp
#include <iostream>

class Scan
{ };

class Dust
{
    Dust() = default;
    
    void Scan();
    
    void Foo() { Scan scan; };
};

void Dust::Scan()
{
    
}

int main(void)
{

}